<resources>
    <string name="app_name">2Calendar</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="textview">TextView</string>
    <string name="back">return</string>
    <string name="mo">Mo</string>
    <string name="tu">Tu</string>
    <string name="we">We</string>
    <string name="th">Th</string>
    <string name="fr">Fr</string>
    <string name="sa">Sa</string>
    <string name="su">Su</string>
    <string name="remove_all">Remove all</string>
</resources>
